--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
 
                                 <!-- Add contact button-->
                                 <a href="{% url 'contact_new' %}">
-                                    <i class="bi-person-plus" style="font-size: 1.5rem;"></i>
+                                    <i class="bi-person-plus icon-vlarge"></i>
                                 </a>
                         </div>
                     </nav>
