--- a/templates/contact_new.html
+++ b/templates/contact_new.html
@@ -6,7 +6,7 @@
 
     <div class="pb-3">
 
-        <div class="text-center mt-4 mb-2">
+        <div class="text-center mt-5 mb-4">
             <h5>Add Contact</h5>
         </div>
 
@@ -60,7 +60,7 @@
 
             <div class="text-center mt-4">
                 <button type="submit" class="btn btn-outline-primary mr-3">Save</button>
-                <a class="btn btn-outline-primary" role="button" href="{% url 'contact_list' %}">Cancel</a>
+                <a class="btn btn-outline-primary" href="{% url 'contact_list' %}">Cancel</a>
             </div>
 
         </form>
