--- a/templates/contact_edit.html
+++ b/templates/contact_edit.html
@@ -6,8 +6,8 @@
 
     <div class="pb-3">
 
-        <div class="text-center mt-4 mb-2">
-            <h5>Edit Contact</h5>
+        <div class="text-center mt-5 mb-4">
+            <h5>Update Contact</h5>
         </div>
 
         <form method="post" enctype="multipart/form-data">
@@ -59,8 +59,9 @@
             </div>
 
             <div class="text-center mt-4">
-                <button type="submit" class="btn btn-outline-primary mr-3">Save</button>
-                <a class="btn btn-outline-primary" role="button" href="{% url 'contact_list' %}">Cancel</a>
+                <button type="submit" class="btn btn-outline-primary mr-3">Update</button>
+                &nbsp
+                <a class="btn btn-outline-primary" href="{% url 'contact_list' %}">Cancel</a>
             </div>
 
         </form>
