--- a/templates/contact_new.html
+++ b/templates/contact_new.html
@@ -60,6 +60,7 @@
 
             <div class="text-center mt-4">
                 <button type="submit" class="btn btn-outline-primary mr-3">Save</button>
+                &nbsp
                 <a class="btn btn-outline-primary" href="{% url 'contact_list' %}">Cancel</a>
             </div>
 
