--- a/templates/contact_delete.html
+++ b/templates/contact_delete.html
@@ -173,10 +173,9 @@
                 </table>
             </div>
 
-            <div class="text-center mt-3">
-                <button type="submit" class="btn btn-outline-danger mr-3">Delete</button>
+            <div class="text-center mt-3"><a class="btn btn-outline-primary" href="{% url 'contact_detail' contact.pk %}">Cancel</a>
                 &nbsp
-                <a class="btn btn-outline-primary" href="{% url 'contact_detail' contact.pk %}">Cancel</a>
+                <button type="submit" class="btn btn-outline-danger mr-3">Delete</button>
             </div>
 
         </form>
